# openphd

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/phd_agent/: __init__.py  main.py  orchestrator.py
backend/src/phd_agent/api/: agents.py  canvas.py  chat.py  deps.py  onboard.py  pipelines.py  schemas.py  tools.py
backend/src/phd_agent/core/: chat.py  composite.py  composite_agent.py  contract.py  events.py  json_repo.py  profile.py  providers.py  registry.py  repository.py  router.py  state.py  tool_executor.py  tool_runtime.py  validator.py  wrapper.py
backend/src/phd_agent/llm/: base.py  budget.py  mock.py  openai_compat.py
backend/src/phd_agent/plugins/: __init__.py  _base.py
backend/src/phd_agent/plugins/arxiv_search/: __init__.py  agent.py  contract.json
backend/src/phd_agent/plugins/email_drafter/: __init__.py  agent.py  contract.json
backend/src/phd_agent/plugins/knowledge_retriever/: __init__.py  agent.py  contract.json
backend/tests/: conftest.py  test_api.py  test_arxiv_search.py  test_chat_models.py  test_chat_wiring.py  test_composite_agent.py  test_composite_model.py  test_contract.py  test_deps_cache.py  test_events.py  test_json_repo.py  test_json_repo_profile.py  test_mock_llm.py  test_onboard_save.py  test_onboard_skip.py  test_onboard_status.py  test_onboard_test.py  test_orchestrator.py  test_profile.py  test_providers.py  test_registry.py  test_repository.py  test_router.py  test_smoke.py  test_smoke_minimax_e2e.py  test_state.py  test_tool_runtime.py  test_tool_runtime_profile.py  test_validator.py  test_wrapper.py
(+79 files in other folders)
